# fm_data

./: .gitignore  @refactoring-proposal.md  CLAUDE.md  CODE_IMPROVEMENTS.md  Cargo.toml  README.md  ROLE_FILE_FORMAT.md  config.ini  config.json  design-player-filter.md  feature-player-browser.md  feature-player-filter.md  impl-image-upload.md  implementation-player-browser.md  implementation-screenshot.md  layout-field.txt  layout-gk.txt  refactor.md  refactoring-proposal.md  selection-design.md  selection-spec.md  simplify-attributes.md  test_roles.txt
benches/: attribute_processing.rs
examples/: formation_mixed_restrictions.txt  formation_with_filters.txt
specs/: 001-design-player-filter.md  002-selection-design.md  003-refactor.md  004-feature-screenshot.md  004-implementation-screenshot.md  006-feature-image-upload.md  007-refactoring-proposal.md  008-simplify-attributes.md
src/: app_builder.rs  app_runner.rs  attributes.rs  auth.rs  browser.rs  browser_repository.rs  browser_ui.rs  cli.rs  clipboard.rs  config.rs  constants.rs  domain.rs  error.rs  error_helpers.rs  error_messages.rs  image_constants.rs  image_data.rs  image_output.rs  image_processor.rs  image_processor_pool.rs  layout_manager.rs  lib.rs  ocr_corrections.rs  progress.rs  selection.rs  setup_commands.rs  sheets_client.rs  sheets_repository.rs  table.rs  test_builders.rs  test_helpers.rs  traits.rs  types.rs  validation.rs  validators.rs
src/config/: defaults.rs  mod.rs  paths.rs  types.rs
src/lib/: fm_google_api.rs
src/selection/: algorithm.rs  categories.rs  formatter.rs  mod.rs  parser.rs  types.rs
src/tryout/: aws_uploader.rs  plotly-test.rs  plotters-test.rs
tests/: integration_tests.rs
