[package]
name = "FMData"
version = "0.2.0"
authors = ["Bjoern Doebel <bjoern.doebel@gmail.com>"]
edition = "2021"
resolver = "2"  # Better dependency resolution

[lib]
name = "fm_data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "fm_google_up"
path = "src/bin/player_uploader.rs"

[[bin]]
name = "fm_team_selector"
path = "src/bin/fm_team_selector.rs"

[[bin]]
name = "fm_image"
path = "src/bin/fm_image.rs"
required-features = ["image-processing"]

[dependencies]
# Core error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
zeroize = "1.7"

# CLI and logging
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
env_logger = "0.10"
log = "0.4"

# Progress reporting
indicatif = "0.17"

# Terminal UI
ratatui = "0.24"
crossterm = "0.27"

# Async runtime - optimized features for our use case
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTML table extraction (fm_google_up only)
table-extract = "0.2.2"

# Google Sheets API
yup-oauth2 = "11.0"
sheets = "0.7.0"

# Image processing (optional, feature-gated)
tesseract = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }
arboard = { version = "3.4", optional = true }

# Test utilities (needed for test_builders module)
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []  # No features enabled by default for lighter builds
image-processing = ["dep:tesseract", "dep:image", "dep:arboard"]
full = ["image-processing"]  # Convenience feature for full functionality

[[bench]]
name = "attribute_processing"
harness = false
required-features = ["image-processing"]
